Update example.env, add users table, add get routes, add create user route, modify create todo route.

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,2 +1,6 @@
+# Server
 PORT=5001
 DATABASE_URL=postgresql://username:password@hostname:port/dbname
+
+# Expo / Mobile App
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
